Fix spacing error that happens only with minified html

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -127,7 +127,8 @@ body {
         display: inline-block;
         margin-bottom: 0;
         &:after {
-          content: " / ";
+          content: "/";
+          margin: 0 0.3rem;
         }
         &:last-child {
           &:after {
